<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <TableLayout
        android:id="@+id/tableLayoutCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32">

        <TableRow>

            <TextView
                android:id="@+id/textViewRange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical"
                android:text="@string/select_a_range_kilometers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rangeSlider" />
        </TableRow>

        <TableRow android:layout_marginTop="10dp">

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rangeSlider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stepSize="5"
                android:valueFrom="5"
                android:valueTo="100" />
        </TableRow>

        <TableRow android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/textViewCategories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical"
                android:text="@string/select_categories_of_interest"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rangeSlider" />

        </TableRow>

        <TableRow android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/checkBoxHistoricalPlaces"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/historical_places"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/checkBoxBeaches"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/beaches"
                android:textSize="15sp" />

        </TableRow>

        <TableRow>

            <CheckBox
                android:id="@+id/checkBoxFunAttractions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fun_attractions"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/checkBoxParks"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/parks"
                android:textSize="15sp" />

        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/imageViewOverlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/text"
        app:layout_constraintBottom_toTopOf="@+id/buttonLocateAndSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayoutCategories" />


    <Button
        android:id="@+id/buttonLocateAndSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:text="@string/LocationLoading"
        android:textColor="#FFFFFF"
        android:onClick="showResults"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayoutCategories"
        app:layout_constraintVertical_bias="0.654" />
</androidx.constraintlayout.widget.ConstraintLayout>
